Actualizar descripción del curso con objetivos oficiales y corregir extensiones de fotos

--- a/team.html
+++ b/team.html
@@ -218,7 +218,7 @@
             <h3>🎓 Nuestro Equipo</h3>
             <div class="team-grid">
                 <div class="team-member">
-                    <img src="FotoArturo.jpg" alt="Arturo Henao Chaparro" class="member-photo">
+                    <img src="FotoArturo.jpeg" alt="Arturo Henao Chaparro" class="member-photo">
                     <div class="member-name">Arturo Henao Chaparro</div>
                     <div class="role-badge">Profesor Principal</div>
                     <div class="member-email">📧 a.henao59@uniandes.edu.co</div>
@@ -230,7 +230,7 @@
                 </div>
 
                 <div class="team-member">
-                    <img src="FotoJuanes.jpg" alt="Juan Esteban Jiménez Benavides" class="member-photo">
+                    <img src="FotoJuanes.jpeg" alt="Juan Esteban Jiménez Benavides" class="member-photo">
                     <div class="member-name">Juan Esteban Jiménez Benavides</div>
                     <div class="role-badge">Monitor</div>
                     <div class="member-email">📧 j.jimenezb@uniandes.edu.co</div>
@@ -241,7 +241,7 @@
                 </div>
 
                 <div class="team-member">
-                    <img src="FotoCatalina.jpg" alt="Catalina Álvarez Latorre" class="member-photo">
+                    <img src="FotoCatalina.jpeg" alt="Catalina Álvarez Latorre" class="member-photo">
                     <div class="member-name">Catalina Álvarez Latorre</div>
                     <div class="role-badge">Monitor</div>
                     <div class="member-email">📧 c.alvarezl2@uniandes.edu.co</div>
