Reorganizar archivos para que welcome.html sea la página principal (index.html) y el cronograma sea schedule.html

--- a/team.html
+++ b/team.html
@@ -242,8 +242,8 @@
 
         <div class="navigation">
             <div class="nav-buttons">
-                <a href="welcome.html" class="nav-button">🏠 Página Principal</a>
-                <a href="index.html" class="nav-button">📅 Cronograma</a>
+                <a href="index.html" class="nav-button">🏠 Página Principal</a>
+                <a href="schedule.html" class="nav-button">📅 Cronograma</a>
             </div>
         </div>
 
